--- a/url-shortener-frontend/src/App.css
+++ b/url-shortener-frontend/src/App.css
@@ -1,75 +1,23 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: rgb(231, 231, 231);
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-h1 {
-  color: #333;
-}
-
-form {
-  margin-bottom: 20px;
 }
 
 input[type="text"] {
   padding: 10px;
   font-size: 16px;
-  width: 300px;
-  margin-right: 10px;
+  width: 800px;
 }
 
-button {
+/* button {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #5cb85c;
   color: white;
   border: none;
   cursor: pointer;
-}
+} */
 
 button:hover {
   background-color: #4cae4c;
@@ -86,4 +34,73 @@ li {
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.app-container {
+  height: 100vh;
+  width: 100vw;
+}
+
+/* .url-header{
+  width: 100%;
+  height: 210px;
+  background: rgb(146,167,227);
+background: linear-gradient(90deg, rgba(146,167,227,1) 0%, rgba(234,241,240,1) 49%, rgba(87,176,217,1) 100%);
+} */
+
+
+.url-form-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100px; 
+  position: relative; 
+  margin-top: -35px;
+  
+}
+.url-list{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.url-form {
+  height: 100px;
+  width: 100%; 
+  max-width: 800px; 
+}
+
+.url-header {
+  width: 100%;
+  height: 210px;
+  background: rgb(146,167,227);
+  background: linear-gradient(90deg, rgba(146,167,227,1) 0%, rgba(234,241,240,1) 49%, rgba(87,176,217,1) 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.url-header h1 {
+  margin: 0 0 15px 0;
+  font-size: 28px;
+}
+
+.url-header p {
+  margin: 0;
+  max-width: 600px;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.url-header p::after {
+  content: attr(data-content);
+  white-space: pre-wrap;
+  text-align: center;
 }
